...
class ComposeRootView: UIView {
    required init?(coder: NSCoder) { fatalError("init(coder:) has not been implemented") }
    
    var viewModel: CVMInterface
    private var dataSource: CollectionViewDataSource<PhotosCell>
    
    let textView: UITextView = create {
        $0.accessibilityIdentifier = "textView"
    }
    
    let publishButton: UIButton = create {
        $0.setTitle("Publish", for: .normal)
        $0.titleLabel?.font = UIFont(name: "Helvetica-Bold", size: 14)
...
        $0.setTitleColor(.systemGray, for: .disabled)
        $0.backgroundColor = .redMain
        $0.layer.cornerRadius = 5
        $0.anchor(top: nil, leading: nil, trailing: nil, bottom: nil, size: .init(width: 60, height: 0))
    }
    
    let counterLabel: UILabel = create {
        $0.accessibilityIdentifier = "counterLabel"
        $0.text = "Characters remaining: "
        $0.font = UIFont(name: "Helvetica", size: 11)
        $0.textColor = .systemGray
        $0.anchor(top: nil, leading: nil, trailing: nil, bottom: nil, size: .init(width: 0, height: 30))
    }
...
